--- a/presentation.html
+++ b/presentation.html
@@ -1,119 +1,127 @@
 <!DOCTYPE html>
 <html lang="fr-FR">
-  	
-	<head>
-		<meta charset="utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<link rel="stylesheet" href="style.css" />
-		<title>Presentation</title>
-	</head>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Presentation</title>
+  </head>
 
-	<Style>
+  <style>
+    .rightbox li {
+      list-style: none;
+      text-align: justify;
+    }
 
-		.rightbox li
-		{
-			list-style: none;
-			text-align: justify;
-		}
+    .img1 {
+      float: left;
+      margin-top: 15px;
+    }
+    .img2 {
+      float: right;
+      margin-top: 15px;
+    }
+  </style>
 
-		.img1
-		{
-			float: left;
-			margin-top: 15px;
-		
-		}
-		.img2
-		{
-			float: right;
-			margin-top: 15px;
-		}
+  <body>
+    <div class="container">
+      <header>
+        <div class="titre">
+          <h1>Bienvenue sur ma page web</h1>
+        </div>
+      </header>
 
-	</Style>
-	 
-	<body>
+      <section id="box">
+        <div class="leftbox">
+          <ul>
+            <li>
+              <a href="index.html">Acceuil</a>
+            </li>
+            <br />
 
-		<div class="container">
+            <li>
+              <a href="cv.html">Mon cv</a>
+            </li>
+            <br />
 
-			<header>
-				<div class="titre">
-					<h1>Bienvenue sur ma page web</h1>
-				</div>
-			</header>
-	
-			<section id="box">
+            <li>
+              <a href="presentation.html">Presentation</a>
+            </li>
+            <br />
 
-				<div class="leftbox">
-					<ul>
-						<li>
-							<a href="index.html">Acceuil</a>
-						</li>	<br>
+            <li>
+              <a href="inscription.html">Inscription</a>
+            </li>
+          </ul>
+        </div>
 
-						<li>
-							<a href="cv.html">Mon cv</a>
-						</li>	<br>
+        <div class="rightbox">
+          <img
+            src="IMG_20220121_172613_534.jpg"
+            style="float: left"
+            weight="180px"
+            height="180px"
+          /><img
+            src="received_1167517920485710.jpeg"
+            style="float: right"
+            weight="180px"
+            height="180px"
+          />
+          <br />
+          <h2>BIENVENUE EN IG1-B</h2>
+          <h3>Ecole Nationale d'Economie Appliquée et de Management (ENEAM)</h3>
 
-						<li>
-							<a href="presentation.html">Presentation</a>
-						</li>	<br>
+          <p>
+            Je m'appelle Floriane HOUNKPONOU. Je suis née le 17 mai 2004. Je
+            suis une fille joyeuse et j'aime beaucoup sourire. Je parle vraiment
+            beaucoup, pas tout le temps mais ça arrive. Je suis née à cotonou et
+            je suis étudiante en Licence d'informatique de gestion à l'ENEAM.
+          </p>
 
-						<li>
-							<a href="inscription.html">Inscription</a>
-						</li>
-					</ul>
-	
-				</div>
+          <h3>Mes Diplômes</h3>
+          <ol>
+            <li>
+              <p>J'ai mon Certificat d'Etudes Primaire (CEP)</p>
+            </li>
 
-				<div class="rightbox">
-					<img src="IMG_20220121_172613_534.jpg" style ="float:left" weight=180px height=180px /><img src="received_1167517920485710.jpeg" style ="float:right" weight=180px height=180px />
-					<br>
-					<h2>BIENVENUE EN IG1-B</h2>
-					<h3>Ecole Nationale d'Economie Appliquée et de Management (ENEAM)</h3>
-					
-					<p>
-						Je m'appelle Floriane HOUNKPONOU. Je suis née le 17 mai 2004. Je suis une fille 
-						joyeuse et j'aime beaucoup sourire. Je parle vraiment beaucoup, pas tout le temps mais
-						ça arrive. Je suis née à cotonou. J'habite à Agla devant le stade de l'amitié. Je suis
-						étudiante en Licence 1 d'informatique de gestion à l'ENEAM.
-					</p>
+            <li>
+              <p>J'ai mon Brevet d'Etudes de Premier Cycle (BEPC)</p>
+            </li>
 
-					<h3>Mes Diplômes</h3>
-					<ol>
-						<li>
-							<p>J'ai mon Certificat d'Etudes Primaire (CEP)</p>
-						</li>
+            <li>
+              <p>J'ai mon Baccalauréat (BAC)</p>
+            </li>
+          </ol>
 
-						<li>
-							<p>J'ai mon Brevet d'Etudes de Premier Cycle (BEPC)</p>
-						</li>
+          <fieldset class="appreciation">
+            <legend><h3>Zone d'appréciation</h3></legend>
 
-						<li>
-							<p>J'ai mon Baccalauréat (BAC)</p>
-						</li>
-					</ol>
-
-					<fieldset class="appreciation">
-
-						<legend> <h3>Zone d'appréciation</h3> </legend>
-
-							<label for="nom"> Nom </label>
-								<input id="nom" type="text" name="nom" placeholder="Votre nom" required/>
-									<br>    
-										<br>
-							<label for="prénom"> Prénom </label>
-							   <input id="prénom" type="text" name="prénom" placeholder="Votre prénom" required/>
-									<br>
-										<br>
-							<label for="commentaire"> Appréciation </label>
-                            <textarea id="commentaire" name="commentaire">  </textarea>
-	
-					</fieldset>
-				</div>
-
-			</section>
-
-		</div>
-	
-	</body>
-
+            <label for="nom"> Nom </label>
+            <input
+              id="nom"
+              type="text"
+              name="nom"
+              placeholder="Votre nom"
+              required
+            />
+            <br />
+            <br />
+            <label for="prénom"> Prénom </label>
+            <input
+              id="prénom"
+              type="text"
+              name="prénom"
+              placeholder="Votre prénom"
+              required
+            />
+            <br />
+            <br />
+            <label for="commentaire"> Appréciation </label>
+            <textarea id="commentaire" name="commentaire"> </textarea>
+          </fieldset>
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
